--- a/prepros-6.config
+++ b/prepros-6.config
@@ -19,7 +19,42 @@
     ],
     "hideUnwatchedFiles": false
   },
-  "imports": [],
+  "imports": [
+    {
+      "path": "css/main1.scss",
+      "imports": [
+        "css/normalize.css",
+        "css/blocks/hero.scss",
+        "css/blocks/header.scss",
+        "css/blocks/menu.scss",
+        "css/blocks/phone.scss",
+        "css/blocks/logo.scss",
+        "css/blocks/btn.scss",
+        "css/blocks/why.scss",
+        "css/blocks/feature.scss",
+        "css/blocks/comments.scss",
+        "css/blocks/comment.scss",
+        "css/blocks/user.scss"
+      ]
+    },
+    {
+      "path": "css/main.scss",
+      "imports": [
+        "css/normalize.css",
+        "css/blocks/hero.scss",
+        "css/blocks/header.scss",
+        "css/blocks/menu.scss",
+        "css/blocks/phone.scss",
+        "css/blocks/logo.scss",
+        "css/blocks/btn.scss",
+        "css/blocks/why.scss",
+        "css/blocks/feature.scss",
+        "css/blocks/comments.scss",
+        "css/blocks/comment.scss",
+        "css/blocks/user.scss"
+      ]
+    }
+  ],
   "projectView": {
     "selectedView": "file-tree"
   },
