--- a/prepros-6.config
+++ b/prepros-6.config
@@ -5,7 +5,8 @@
   "fileConfigs": [],
   "fileTree": {
     "expandedDirs": [
-      "css"
+      "css",
+      "css/blocks"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
