--- a/prepros-6.config
+++ b/prepros-6.config
@@ -52,7 +52,8 @@
         "css/blocks/feature.scss",
         "css/blocks/comments.scss",
         "css/blocks/comment.scss",
-        "css/blocks/user.scss"
+        "css/blocks/user.scss",
+        "css/blocks/team.scss"
       ]
     }
   ],
