--- a/prepros-6.config
+++ b/prepros-6.config
@@ -53,7 +53,11 @@
         "css/blocks/comments.scss",
         "css/blocks/comment.scss",
         "css/blocks/user.scss",
-        "css/blocks/team.scss"
+        "css/blocks/team.scss",
+        "css/blocks/contacts.scss",
+        "css/blocks/card.scss",
+        "css/blocks/footer.scss",
+        "css/blocks/social.scss"
       ]
     }
   ],
