--- a/prepros-6.config
+++ b/prepros-6.config
@@ -57,7 +57,8 @@
         "css/blocks/contacts.scss",
         "css/blocks/card.scss",
         "css/blocks/footer.scss",
-        "css/blocks/social.scss"
+        "css/blocks/social.scss",
+        "css/blocks/form.scss"
       ]
     }
   ],
