--- a/prepros-6.config
+++ b/prepros-6.config
@@ -58,7 +58,8 @@
         "css/blocks/card.scss",
         "css/blocks/footer.scss",
         "css/blocks/social.scss",
-        "css/blocks/form.scss"
+        "css/blocks/form.scss",
+        "css/blocks/menu1.scss"
       ]
     }
   ],
