--- a/prepros-6.config
+++ b/prepros-6.config
@@ -59,7 +59,9 @@
         "css/blocks/footer.scss",
         "css/blocks/social.scss",
         "css/blocks/form.scss",
-        "css/blocks/menu1.scss"
+        "css/blocks/menu1.scss",
+        "css/blocks/slider.scss",
+        "css/blocks/content.scss"
       ]
     }
   ],
