--- a/prepros-6.config
+++ b/prepros-6.config
@@ -42,6 +42,7 @@
       "path": "css/main.scss",
       "imports": [
         "css/normalize.css",
+        "css/_misc/media.scss",
         "css/blocks/hero.scss",
         "css/blocks/header.scss",
         "css/blocks/menu.scss",
