--- a/prepros-6.config
+++ b/prepros-6.config
@@ -62,7 +62,8 @@
         "css/blocks/form.scss",
         "css/blocks/menu1.scss",
         "css/blocks/slider.scss",
-        "css/blocks/content.scss"
+        "css/blocks/content.scss",
+        "css/blocks/burger.scss"
       ]
     }
   ],
