--- a/prepros-6.config
+++ b/prepros-6.config
@@ -42,28 +42,28 @@
       "path": "css/main.scss",
       "imports": [
         "css/normalize.css",
-        "css/_misc/media.scss",
-        "css/blocks/hero.scss",
-        "css/blocks/header.scss",
-        "css/blocks/menu.scss",
-        "css/blocks/phone.scss",
-        "css/blocks/logo.scss",
-        "css/blocks/btn.scss",
-        "css/blocks/why.scss",
-        "css/blocks/feature.scss",
-        "css/blocks/comments.scss",
-        "css/blocks/comment.scss",
-        "css/blocks/user.scss",
-        "css/blocks/team.scss",
-        "css/blocks/contacts.scss",
-        "css/blocks/card.scss",
-        "css/blocks/footer.scss",
-        "css/blocks/social.scss",
-        "css/blocks/form.scss",
-        "css/blocks/menu1.scss",
-        "css/blocks/slider.scss",
-        "css/blocks/content.scss",
-        "css/blocks/burger.scss"
+        "css/_misc/_media.scss",
+        "css/blocks/_hero.scss",
+        "css/blocks/_header.scss",
+        "css/blocks/_menu.scss",
+        "css/blocks/_phone.scss",
+        "css/blocks/_logo.scss",
+        "css/blocks/_btn.scss",
+        "css/blocks/_why.scss",
+        "css/blocks/_feature.scss",
+        "css/blocks/_comments.scss",
+        "css/blocks/_comment.scss",
+        "css/blocks/_user.scss",
+        "css/blocks/_team.scss",
+        "css/blocks/_contacts.scss",
+        "css/blocks/_card.scss",
+        "css/blocks/_footer.scss",
+        "css/blocks/_social.scss",
+        "css/blocks/_form.scss",
+        "css/blocks/_menu1.scss",
+        "css/blocks/_slider.scss",
+        "css/blocks/_content.scss",
+        "css/blocks/_burger.scss"
       ]
     }
   ],
