--- a/prepros-6.config
+++ b/prepros-6.config
@@ -63,7 +63,8 @@
         "css/blocks/_menu1.scss",
         "css/blocks/_slider.scss",
         "css/blocks/_content.scss",
-        "css/blocks/_burger.scss"
+        "css/blocks/_burger.scss",
+        "css/blocks/_video.scss"
       ]
     }
   ],
